--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.3.2",
+    "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
+    "swiper": "^4.5.1",
     "vant": "^2.2.13-beta.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
