--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "axios": "^0.19.0",
     "better-scroll": "^1.15.2",
     "core-js": "^3.3.2",
+    "fastclick": "^1.0.6",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "swiper": "^4.5.1",
     "vant": "^2.2.13-beta.0",
     "vue": "^2.6.10",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.3",
     "vuex": "^3.0.1"
   },
